files restructurizing: created algorithms directory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-message(STATUS "executing src")
+message(STATUS "entering src")
+
+add_subdirectory(algorithms)
 
 add_executable(main main.cpp)
-
-add_executable(sort sort.cpp)
 
 add_executable(test test.cpp list_test.cpp)
 target_link_libraries(test cppunit)
