--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 compiler:
   - gcc
 install:
+  - sudo apt-get update
   - sudo apt-get install libcppunit-1.12-1
   - ./build.sh
 script:
@@ -12,6 +13,3 @@ notifications:
   email:
     on_success: change
     on_failure: always
-rvm:
-  - 1.8.7
-  - 1.9.3
