--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler:
   - gcc
 install:
   - sudo apt-get update
-  - sudo apt-get install libcppunit-1.12-1
+  - sudo apt-get install libcppunit-dev libcppunit-1.12-1
   - ./build.sh
 script:
   - ./build/runtest
